--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,7 +8,7 @@
         <groupId>org.example</groupId>
         <artifactId>some-app-dependencies-bom</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../some-app-dependencies-bom/pom.xml</relativePath>
+        <relativePath>../some-app-dependencies-bom</relativePath>
     </parent>
 
     <artifactId>core</artifactId>
@@ -50,6 +50,30 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Starter Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
+        <!-- MyBatis Spring Boot Starter -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Liquibase -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
     </dependencies>
 </project>
