--- a/some-app-dependencies-bom/pom.xml
+++ b/some-app-dependencies-bom/pom.xml
@@ -8,12 +8,16 @@
         <groupId>org.example</groupId>
         <artifactId>some_app</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../</relativePath>
     </parent>
 
     <artifactId>some-app-dependencies-bom</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <properties>
+        <springframework.boot.version>2.4.4</springframework.boot.version>
+    </properties>
 
     <name>some-app-dependencies-bom</name>
 
@@ -65,6 +69,22 @@
                 <version>3.8.0</version>
                 <scope>test</scope>
             </dependency>
+
+            <!-- Spring Boot Starter -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.4.4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- MyBatis Spring Boot Starter -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>2.1.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -109,6 +129,10 @@
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>3.0.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
                 </plugin>
             </plugins>
         </pluginManagement>
