--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -23,5 +23,22 @@
     </properties>
 
     <dependencies>
+        <!-- Entity -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>entity</artifactId>
+        </dependency>
+
+        <!-- MyBatis Spring Starter -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Starter Data JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 </project>
