--- a/some-app-dependencies-bom/pom.xml
+++ b/some-app-dependencies-bom/pom.xml
@@ -24,14 +24,22 @@
     <dependencyManagement>
         <dependencies>
             <!-- Inner dependencies -->
+            <!-- API -->
             <dependency>
                 <groupId>org.example</groupId>
                 <artifactId>api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <!-- DTO -->
             <dependency>
                 <groupId>org.example</groupId>
                 <artifactId>dto</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <!-- Entity -->
+            <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>entity</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
