--- a/some-app-dependencies-bom/pom.xml
+++ b/some-app-dependencies-bom/pom.xml
@@ -42,6 +42,12 @@
                 <artifactId>entity</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <!-- DAO -->
+            <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>dao</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 
             <!-- Jackson JSON -->
             <dependency>
@@ -92,6 +98,13 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>2.1.4</version>
+            </dependency>
+
+            <!-- Model Mapper -->
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>2.3.9</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
