--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -3,6 +3,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/hr_sample
     username: postgres
     password: 12345
+    driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: classpath:db/changelog/changelog-master.xml
-
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
