--- a/core/pom.xml
+++ b/core/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>modelmapper</artifactId>
         </dependency>
 
+        <!-- Open API UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+        </dependency>
+
         <!-- Tests -->
         <!-- Spring Boot Starter Test -->
         <dependency>
