--- a/some-app-dependencies-bom/pom.xml
+++ b/some-app-dependencies-bom/pom.xml
@@ -134,6 +134,12 @@
                 <version>3.15.5</version>
             </dependency>
 
+            <!-- JWT -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
+            </dependency>
 
             <!-- Tests -->
             <!-- JUnit 4 Tests -->
