--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,71 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
+
     <artifactId>some_app</artifactId>
+
     <packaging>pom</packaging>
+
     <version>1.0-SNAPSHOT</version>
+
     <modules>
+
         <module>core</module>
+
         <module>some-app-dependencies-bom</module>
+
         <module>api</module>
+
         <module>dto</module>
+
         <module>migration</module>
+
         <module>dao</module>
+
         <module>entity</module>
+
+        <module>active-mq</module>
+
     </modules>
 
     <name>some_app</name>
+
     <url>http://www.digitalleague.ru</url>
 
     <properties>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     </properties>
 
     <build>
+
         <plugins>
+
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
+
                 <artifactId>maven-compiler-plugin</artifactId>
+
                 <configuration>
+
                     <source>8</source>
+
                     <target>8</target>
+
                 </configuration>
+
             </plugin>
+
         </plugins>
+
     </build>
+
 </project>
