--- a/some-app-dependencies-bom/pom.xml
+++ b/some-app-dependencies-bom/pom.xml
@@ -48,6 +48,12 @@
                 <artifactId>dao</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <!-- ActiveMQ -->
+            <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>active-mq</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 
             <!-- Jackson JSON -->
             <dependency>
