--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -6,6 +6,10 @@ spring:
     driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: classpath:db/changelog/changelog-master.xml
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
